ERROR: Unhandled web process message 'StorageAreaMap:DispatchStorageEvent' https://bugs.webkit.org/show_bug.cgi?id=150315

Reviewed by Andreas Kling.

It was introduced in r184930, that keeps the session storage area
maps alive in the UI process when they are destroyed by the web
process. The problem is that we also keep the listeners, so that
events are also dispatched to the listeners of destroyed areas,
and the message handlers were removed in the web process.

* UIProcess/Storage/StorageManager.cpp:
(WebKit::StorageManager::createTransientLocalStorageMap): Add a
listener for the new storage map ID when the map is reused.
(WebKit::StorageManager::destroyStorageMap): Always remove
listeners of destroyed maps.

Canonical link: https://commits.webkit.org/168500@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191333 268f45cc-cd09-0410-ab3c-d52691b4dbfc